CSS cleanup * Add old GameFOX Standard stylesheet for people who want the previous QuickPost look. * Fix all those weird spacing issues in the sidebar * Remove visited-colors.css as it's long since obsolete Signed-off-by: Brian Marshall <b3marshall@gmail.com>

--- a/chrome/skin/sidebar.css
+++ b/chrome/skin/sidebar.css
@@ -1,17 +1,16 @@
+/* vim: set et sw=4 sts=4 ts=4: */
 html
 {
     background-color: #5BA1D4;
     color: #ffffff;
     font-family: Trebuchet, Trebuchet MS, Lucida Grande, Lucida Sans Unicode, Arial, Verdana, sans-serif;
-    width: 98%;
-    font-size: 13px;
-    margin: 0;
+    font-size: .9em;
 }
 
 body
 {
     margin: 0;
-    margin-left: 2px;
+    padding: 0 6px 0 2px;
 }
 
 a 
@@ -54,7 +53,7 @@ a:hover
 
 input
 {
-    width: 100%;
+    width: 101%;
     border: 0 solid #000000;
 }
 
